Fix code so that both keyboard and mouse input works, prevent numbers overflowing

--- a/style.css
+++ b/style.css
@@ -38,7 +38,14 @@ button{
     background-color: #CFD8DC;
 }
 
-.equal-sign{
+.operator{
+    background-color: #FFC107;
+    color: #ffffff;
+    font-size: 45px;
+    text-shadow: 1px 2px #795548;
+}
+
+#equal-sign{
     grid-row-start: 2;
     grid-row-end: 5;
     grid-column-start: 4;
@@ -47,13 +54,6 @@ button{
     color: white;
     font-size: 60px;
     text-shadow: 2px 2px #607d8b;
-}
-
-.operator{
-    background-color: #FFC107;
-    color: #ffffff;
-    font-size: 45px;
-    text-shadow: 1px 2px #795548;
 }
 
 .all-clear{
